# sse_usage

./: README.md  main.py  pyproject.toml
output/secure-access_20260327_132347/: correlated_log.csv  summary.json  swg_log.csv  vpn_log.csv
output/secure-access_20260327_154452/: correlated_log.csv  summary.json  swg_log.csv  vpn_log.csv  ztna_log.csv
output/secure-access_20260327_160144/: summary.json  swg_log.csv  vpn_log.csv
output/secure-access_20260327_160623/: correlated_log.csv  summary.json  swg_log.csv  ztna_log.csv
output/secure-access_20260327_183155/: correlated_log.csv  summary.json  swg_log.csv  vpn_log.csv  ztna_log.csv
output/secure-access_20260330_093629/: correlated_log.csv  summary.json  swg_log.csv  vpn_log.csv  ztna_log.csv
output/secure-access_20260330_095231/: correlated_log.csv  summary.json  swg_log.csv  vpn_log.csv
output/secure-access_20260330_155527/: correlated_log.csv  summary.json  swg_log.csv  vpn_log.csv  ztna_log.csv
output/umbrella_20260330_090824/: summary.json  swg_log.csv
output/umbrella_20260330_112250/: correlated_log.csv  summary.json  swg_log.csv
output/umbrella_20260330_151923/: summary.json  swg_log.csv
output/umbrella_20260330_153915/: correlated_log.csv  summary.json  swg_log.csv
sse_user_counter/: __init__.py  cache.py  cli.py  collectors.py  http.py  models.py  reports.py
tests/: test_cli.py  test_collectors.py  test_http.py
