[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sse-user-counter"
version = "0.1.0"
description = "Command line utility for counting Cisco Umbrella and Cisco Secure Access service usage."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
sse-user-counter = "sse_user_counter.cli:main"

[tool.setuptools.packages.find]
include = ["sse_user_counter*"]
